# busx

./: .gitignore  .gitmodules  .goreleaser.yaml  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING.zh_CN.md  Cargo.lock.license  Cargo.toml  README.md  README.zh_CN.md  REUSE.toml  TODO.md
.github/: dependabot.yaml
.github/workflows/: cd.yaml  ci.yaml
.reuse/: dep5
crates/busx/: .goreleaser.yaml  Cargo.toml
crates/busx/src/: cli.rs  complete.rs  error.rs  log.rs  main.rs  out.rs
crates/busx/src/dbus/: call.rs  emit.rs  introspect.rs  list.rs  mod.rs  property.rs  tree.rs
crates/busx/src/ops/: emit.rs  introspect.rs  list.rs  mod.rs  monitor.rs  property.rs  tree.rs
crates/busx/src/tui/: app.rs  copy.rs  copy_tests.rs  e2e_tests.rs  mod.rs  msg.rs  render.rs  snapshot_tests.rs  state.rs  update.rs
crates/busx/src/value/: dict.rs  encode.rs  mod.rs  pretty.rs
crates/busx/tests/: call.rs  completion.rs  emit.rs  get.rs  harness.rs  introspect.rs  list.rs  monitor.rs  set.rs  tree.rs  tui_pty.rs
crates/testbus/: Cargo.toml
crates/testbus/src/: lib.rs
crates/tuiprobe/: Cargo.toml  README.md
crates/tuiprobe/src/: emulator.rs  error.rs  events.rs  harness.rs  lib.rs  pty.rs
crates/tuiprobe/tests/: smoke.rs
docs/superpowers/plans/: 2026-07-07-busx.md  2026-07-08-busx-tui-phase0-core.md  2026-07-08-busx-tui-phase1-skeleton.md  2026-07-09-busx-tui-phase2-browse.md  2026-07-09-busx-tui-phase3-actions.md  2026-07-09-busx-tui-phase4-listen.md  2026-07-10-busx-tui-focus-mouse.md  2026-07-10-busx-tui-phase5-copyas.md  2026-07-22-wait-snapshot.md
docs/superpowers/specs/: 2026-07-07-busx-design.md  2026-07-08-busx-tui-design.md  2026-07-10-busx-tui-focus-mouse-design.md  2026-07-22-wait-snapshot-design.md
scripts/: get-project-version.sh  ls-todo.sh
src/: cli.rs  complete.rs  conn.rs  error.rs  introspect.rs  lib.rs  main.rs  out.rs
src/dbus/: call.rs  conn.rs  introspect.rs  list.rs  mod.rs  monitor.rs  property.rs  tree.rs  types.rs
src/ops/: call.rs  introspect.rs  list.rs  mod.rs  monitor.rs  property.rs  tree.rs
src/tui/: app.rs  copy.rs  mod.rs  msg.rs  render.rs  state.rs  update.rs
src/value/: decode.rs  dict.rs  encode.rs  fdinfo.rs  mod.rs  pretty.rs
tests/: call.rs  completion.rs  copy.rs  get.rs  harness.rs  introspect.rs  list.rs  monitor.rs  set.rs  tree.rs  tui.rs  version.rs
tests/common/: mod.rs
tests/snapshots/: tui__call_action_flows_interface_to_result.snap  tui__call_detail_aligns_arg_labels.snap  tui__call_detail_form_renders_field_and_trigger.snap  tui__call_result_renders_reply_value.snap  tui__copy_as_capstone_loop_closes_popup_over_result.snap  tui__copy_as_popup_renders_over_detail.snap  tui__drill_down_auto_skips_service_to_interface.snap  tui__get_result_renders_value.snap  tui__help_overlay_renders_over_screen.snap  tui__interface_renders_action_button_bar.snap  tui__interface_screen_renders_three_columns.snap  tui__interface_screen_shows_getall_error_scoped_to_properties.snap  tui__interfaces_screen_lists_interfaces.snap  tui__listen_action_flows_interface_to_streaming_result.snap  tui__listen_refused_renders_error_on_result.snap  tui__listen_result_renders_streaming_messages.snap  tui__loop_loads_services_then_navigates.snap  tui__objects_screen_renders_flat_paths.snap  tui__objects_screen_renders_tree.snap  tui__service_screen_down_arrow_moves_selection.snap  tui__service_screen_error_state.snap  tui__service_screen_loading_state.snap  tui__service_screen_renders_populated_list.snap  tui__set_detail_form_renders_one_field.snap
(+88 files in other folders)
